--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head class="">
-      <link rel="stylesheet" href="diseño.css">
+      <link rel="stylesheet" href="style.css">
 <div class="encabezado">
  
 <h1 class="tituloencabezado">hola</h1>
