--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                         que cada momento sea magico , y sobre todo que sepas que tienes mi apoyo  en lo que necesites,Cada instante que pasamos juntos es un tesoro precioso, aunque a veces siento que 
                                         el tiempo vuela demasiado rápido
                                         ;
-                                        espero  que  nuestra relación sea un refugio donde ambos podemos sentirnos cómodos y a gusto.<br> Cada vez que me 
+                                        espero  que  nuestra relación sea un refugio donde ambos podamos sentirnos cómodos y a gusto.<br> Cada vez que me 
                                         abrazas me siento feliz y protejida, te agradezco por   despertar mi lado romántico, una faceta que desconocía 
                                        o sencillamente no me gustaba demostrar cariño hacia una persona , no sabia que era querer tanto a una persona hasta que llegaste a mi vida.
                                     </p><br><p> Me gusta observarte fijamente ver esas hermosas pestañas tus ojos color marron, tu rostro  me gusta me gustas MUCHOOO;
